added class container for views

--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,4 +1,4 @@
-<h3>comments</h3>
+<h1>Comments</h1>
 <% @post.comments.each do |comment| %>
 <div class="well">
   <p><strong><%= comment.username %></strong>: <%= comment.body%></p>
