--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,6 @@
+<br>
 <h1>Edit Post</h1>
+<div class="container">
 <%= form_for :post, url: post_path(@post), method: :patch do |f| %>
 <% if @post.errors.any? %>
 <% @post.errors.full_messages.each do |msg| %>
@@ -18,4 +20,5 @@
 <p>
   <%= f.submit({:class => 'btn btn-primary'})%>
 </p>
+</div>
 <% end %>
