--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,24 +10,8 @@
   </head>
 
   <body>
-
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">NiceBlog</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li><%= link_to "Home", home_path %></li>
-          </ul>
-          <ul class="navbar-nav navbar-right">
-            <li><%= link_to "Create Post", new_post_path %></li>
-            </ul>
-            </div>
-          </nav>
-<div cl ass="container">
-    <%= yield %>
-    </div>
-  </body>
+<%= render "layouts/navbar" %>
+<%= yield %>
+<%= render 'layouts/footer' %>
+</body>
 </html>
