--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,12 @@
-<h1>Blog posts</h1>
+<br>
+<h1>Blog Posts</h1>
 <% @posts.each do |post| %>
+<div class= "container">
 <div class="well">
 <h3><%= post.title %></h3>
 <p><%= post.body %></p>
 <%= link_to "Read More", post_path(post), :class => 'btn btn-primary' %>
+
+</div>
 </div>
 <% end %>
