--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,6 @@
+<br>
 <h1>Add post</h1>
+<div class= "container">
 <%= form_for :post, url: posts_path do |f| %>
 <% if @post.errors.any? %>
 <% @post.errors.full_messages.each do |msg| %>
@@ -18,4 +20,5 @@
 <p>
   <%= f.submit({:class => 'btn btn-primary'})%>
 </p>
+</div>
 <% end %>
