--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -25,6 +25,13 @@ p {
   line-height: 1.7em;
 }
 
+/* Main */
+body {
+  background-color: #f4f4f4;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
 /* footer */
 
 footer {
@@ -55,6 +62,12 @@ footer ul li {
   float: left;
   margin-left: 15px;
 }
+
+/* Class */
 .well{
   margin: 50px;
+}
+.container{
+  width: 80%;
+  margin: auto;
 }
