--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -4,6 +4,6 @@
   <p><strong><%= comment.username %></strong>: <%= comment.body%></p>
   <%= link_to '[X]', [comment.post, comment],
   method: :delete,
-  data: {confirm: 'Are you sure?'} %></p>
+  data: {confirm: 'Are you sure?'} %>
 </div>
 <% end %>
