--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,13 +2,13 @@
 <footer class="footer">
   <div class= "container">
   <small>
-    The <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    by <a href="http://www.michaelhartl.com/">Deven Gurung</a>
+   <a href="">Nice Blog by</a>
+   <a href="https://github.com/deven9229"> Deven Gurung</a>
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About",  home_path %></li>
-      <li><%= link_to "Contact", home_path %></li>
+      <li><%= link_to "About",  about_path %></li>
+      <li><%= link_to "Contact", contact_path %></li>
   </nav>
   </div>
 </footer>
