--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,8 +11,14 @@
       <li><%= link_to "Home", home_path %></li>
       </ul>
       <ul class="navbar-nav navbar-right">
-        <li><%= link_to "Create Post", new_post_path %></li>
-        </ul>
+          <% if current_user %>
+      <li><%= link_to "Create Post", new_post_path %></li>
+       <li> <%= link_to 'Sign out', destroy_user_session_path, method: :delete %> </li>
+        <% else %>
+        <li><%= link_to 'Sign up', new_user_registration_path %> </li>
+        <li> <%= link_to 'Sign in', new_user_session_path %></li
+        <% end %>
+         </ul>
         </div>
         </div>
       </nav>
