--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,24 +1,37 @@
-
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <div class="container">
-  <a class="navbar-brand" href="#">NiceBlog</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Blog</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li><%= link_to "Home", home_path %></li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+
       </ul>
-      <ul class="navbar-nav navbar-right">
-          <% if current_user %>
-      <li><%= link_to "Create Post", new_post_path %></li>
-       <li> <%= link_to 'Sign out', destroy_user_session_path, method: :delete %> </li>
-        <% else %>
-        <li><%= link_to 'Sign up', new_user_registration_path %> </li>
-        <li> <%= link_to 'Sign in', new_user_session_path %></li
-        <% end %>
-         </ul>
+    <ul class="navbar-nav ml-auto">
+      <% if current_user %>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <%= current_user.email %>
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <%= link_to 'Create post', new_post_path, class: 'dropdown-item' %>
+
+          <div class="dropdown-divider"></div>
+          <%=  link_to "Edit Account", edit_user_registration_path, class: 'dropdown-item'%>
+          <%= link_to 'Sign out', destroy_user_session_path, class: 'dropdown-item', method: :delete %>
+
         </div>
-        </div>
-      </nav>
+      </li>
+      <% else %>
+    <li class="nav-item">
+      <%= link_to 'Create account', new_user_registration_path, class:'nav-link' %></li>
+    <li class="nav-item">
+      <%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %></li>
+      <% end %>
+</ul>
+  </div>
+</nav>
