--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Blog</a>
+  <%= link_to "Blog", posts_path, class: 'navbar-brand' %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,8 +7,9 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
+        <li class="nav-item">
+          <%= link_to 'Home', posts_path, class:'nav-link' %></li>
+          <%= link_to 'Create post', new_post_path, class: 'nav-link' %>
 
       </ul>
     <ul class="navbar-nav ml-auto">
@@ -18,7 +19,6 @@
         <%= current_user.email %>
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <%= link_to 'Create post', new_post_path, class: 'dropdown-item' %>
 
           <div class="dropdown-divider"></div>
           <%=  link_to "Edit Account", edit_user_registration_path, class: 'dropdown-item'%>
