--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,12 +3,16 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.body %></p>
 <hr>
+<% if current_user %>
 <%= link_to "Edit", edit_post_path(@post), :class => 'btn btn-primary' %>
 <%= link_to "Delete", post_path(@post),
 method: :delete,
 data: {confirm: 'Are you sure?'},
 :class => 'btn btn-danger' %>
-
+<% else %>
+<p style="text-align:center">
+You need to be <%= link_to "Signed in", new_user_session_path %> in order to delete or edit the post</p>
+<% end %>
 <hr>
 
 <%= render 'comments/comments' %>
