added avator for user

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -12,12 +12,12 @@ h1 {
 }
 
 h2 {
-  font-size: 1.2em;
+  font-size: 2em;
   letter-spacing: -1px;
   margin-bottom: 30px;
   text-align: left;
   font-weight: normal;
-  color: #777;
+
 }
 
 p {
@@ -70,4 +70,12 @@ footer ul li {
 .container{
   width: 80%;
   margin: auto;
+}
+
+/* AVATAR */
+.avatar {
+  max-height:30px;
+  border-radius: 15px;
+  width:auto;
+  vertical-align:middle;
 }
