--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,29 +9,27 @@
       <li class="nav-item active">
         <li class="nav-item">
           <%= link_to 'Home', posts_path, class:'nav-link' %></li>
-          <%= link_to 'Create post', new_post_path, class: 'nav-link' %>
+          <%= link_to 'Create post', new_post_path, class: 'nav-link' %></ul>
 
-      </ul>
     <ul class="navbar-nav ml-auto">
       <% if current_user %>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <%= current_user.email %>
-        </a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-
-          <div class="dropdown-divider"></div>
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <img class="avatar" src="<%= gravatar_url(current_user) %>">
+      <%= current_user.email %>
+      </a>
+      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <%=  link_to "Edit Account", edit_user_registration_path, class: 'dropdown-item'%>
           <%= link_to 'Sign out', destroy_user_session_path, class: 'dropdown-item', method: :delete %>
+      </div></li>
 
-        </div>
-      </li>
       <% else %>
+
     <li class="nav-item">
       <%= link_to 'Create account', new_user_registration_path, class:'nav-link' %></li>
     <li class="nav-item">
       <%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %></li>
       <% end %>
-</ul>
+      </ul>
   </div>
 </nav>
