--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,8 +4,8 @@
 
 <hr>
 
-<%= link_to 'Edit', edit_post_path(@post) if policy(Post).edit? %>
-<%= link_to 'Destroy', post_path(@post), method: :delete, data: { confirm: 'Are you sure?' } if policy(Post).destroy?%>
+<%= link_to 'Edit', edit_post_path(@post) if PostPolicy.new(current_user, @post).edit? %>
+<%= link_to 'Destroy', post_path(@post), method: :delete, data: { confirm: 'Are you sure?' } if PostPolicy.new(current_user, @post).destroy?%>
 
 <hr>
 
