Displays creator of the post on show and index

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,12 @@
-<div class="container">
 <h1><%= @post.title %></h1>
 <p><%= @post.body %></p>
-
 <hr>
 
 <%= link_to 'Edit', edit_post_path(@post) if PostPolicy.new(current_user, @post).edit? %>
+<p>By <%= @post.user.email %></p>
 <%= link_to 'Destroy', post_path(@post), method: :delete, data: { confirm: 'Are you sure?' } if PostPolicy.new(current_user, @post).destroy?%>
 
 <hr>
 
 <%= render 'comments/comments' %>
 <%= render 'comments/form' %>
-</div>
