changed the name of the project to diskos from navbar, footer and index page

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,8 +2,8 @@
 <footer class="footer">
   <div class= "container">
     <small>
-      <a href="">Nice Blog by</a>
-      <a href="https://github.com/deven9229"> Deven Gurung</a>
+      <a href="">Diskos by</a>
+      <a href="https://github.com/deven9229"> Lumino Software</a>
     </small>
     <nav>
       <ul>
