--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="column is-8">
-<h1>Blog posts</h1>
+<h1>Diskos</h1>
 <% @posts.each do |post| %>
 <div class="columns bb-not-last pv10">
       <div class="column is-8">
