--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,15 +1,19 @@
-<h3>Add Comment</h3>
-<%= form_for ([@post,@post.comments.build]) do |f| %>
-<p>
-  <%= f.label :username %><br>
-  <%= f.text_field(:username, {:class => 'form-control'}) %>
-</p>
-<p>
-  <%= f.label :body %><br>
-  <%= f.text_area(:body, {:class => 'form-control'}) %>
-</p>
+<div class="row">
+  <div class="col-sm-4">
+    <div class="mt-2"><h3>Add comment</h3></div>
+    <%= form_for ([@post,@post.comments.build]) do |f| %>
+    <p>
+      <%= f.label :username %><br>
+      <%= f.text_field(:username, {:class => 'form-control'}) %>
+    </p>
+    <p>
+      <%= f.label :body %><br>
+      <%= f.text_area(:body, {:class => 'form-control'}) %>
+    </p>
 
-<p>
-  <%= f.submit({:class => 'btn btn-primary'})%>
-</p>
-<% end %>
+    <p>
+      <%= f.submit({:class => 'btn btn-primary'})%>
+    </p>
+    <% end %>
+  </div>
+</div>
