Pagination in center

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,6 +16,9 @@
 </div>
 <% end %>
 
-<%= will_paginate(@posts) %>
+<div class="d-flex justify-content-center">
+  <%= will_paginate(@posts) %>
+</div>
+
 
 
