--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,13 +1,12 @@
-<div class="row">
-  <div class="col-sm-4">
-    <h2>Add post</h2>
     <% if current_user %>
+      <h2>Add post</h2>
     <%= form_for :post, url: posts_path do |f| %>
     <% if @post.errors.any? %>
     <% @post.errors.full_messages.each do |msg| %>
     <div class="alert alert-danger"><%= msg %> </div>
     <% end %>
     <% end %>
+
     <p>
       <%= f.label :title %><br>
       <%= f.text_field(:title, {:class => 'form-control'}) %>
@@ -21,10 +20,8 @@
     <p>
       <%= f.submit({:class => 'btn btn-primary'})%>
     </p>
+
     <% end %>
     <% else %>
-    <p style="text-align:center">
-      You need to be <%= link_to "Signed in", new_user_session_path %> in order to create a post</p>
-      <% end %>
-    </div>
-  </div>
+    <p class="text-center">You need to be <%= link_to "Signed in", new_user_session_path %> in order to create a post</p>
+    <% end %>
